WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
277759
REGRESSION(
280985@main
): Broke some HLS videos
https://bugs.webkit.org/show_bug.cgi?id=277759
Summary
REGRESSION(280985@main): Broke some HLS videos
WebKit Commit Bot
Reported
2024-08-07 12:32:26 PDT
https://commits.webkit.org/280985@main
introduced a regression: Broke some HLS videos This is an automatic bug report generated by webkitbot. If this bug report was created because of a flaky test, please file a bug for the flaky test (if we don't already have one on file) and dup this bug against that bug so that we can track how often these flaky tests fail.
Attachments
REVERT of 280985@main
(9.89 KB, patch)
2024-08-07 12:32 PDT
,
WebKit Commit Bot
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
WebKit Commit Bot
Comment 1
2024-08-07 12:32:32 PDT
Created
attachment 472071
[details]
REVERT of
280985@main
Any committer can land this patch automatically by marking it commit-queue+. The commit-queue will build and test the patch before landing to ensure that the revert will be successful. This process takes approximately 15 minutes. If you would like to land the revert faster, you can use the following command: webkit-patch land-attachment ATTACHMENT_ID where ATTACHMENT_ID is the ID of this attachment.
Radar WebKit Bug Importer
Comment 2
2024-08-07 12:35:22 PDT
<
rdar://problem/133405640
>
Matthew Finkel
Comment 3
2024-08-07 12:35:42 PDT
rdar://132763216
EWS
Comment 4
2024-08-07 12:42:17 PDT
Committed
281951@main
(1ac958daec65): <
https://commits.webkit.org/281951@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 472071
[details]
.
EWS
Comment 5
2024-08-08 08:51:35 PDT
Committed
280938.208@safari-7619-branch
(85716fdab5b6): <
https://commits.webkit.org/280938.208@safari-7619-branch
> Reviewed commits have been landed. Closing PR #1572 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug