Cherry-pick 1ac958daec65. rdar://132763216

Unreviewed, reverting 280985@main.
    https://bugs.webkit.org/show_bug.cgi?id=277759

    Broke some HLS videos

    Reverted changeset:

    "Restrict performance entries from no-cors cross-origin media requests"
    https://bugs.webkit.org/show_bug.cgi?id=276208
    https://commits.webkit.org/280985@main

    Canonical link: https://commits.webkit.org/281951@main

Canonical link: https://commits.webkit.org/280938.208@safari-7619-branch